--- a/app/src/main/res/layout/fragment_tasbeh_fragment.xml
+++ b/app/src/main/res/layout/fragment_tasbeh_fragment.xml
@@ -1,13 +1,143 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ui.fragment.tasbeh_fragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/mainbackground"
+    >
 
-    <!-- TODO: Update blank fragment layout -->
+
+
+
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="المسبحة الالكترونية"
+        android:gravity="center"
+        android:padding="20sp"
+        android:textSize="30sp"
+        android:textColor="#fff"
+        android:textStyle="bold"
+        />
 
-</FrameLayout>
+
+
+
+
+    <Button
+        android:id="@+id/refrach"
+        android:layout_width="80sp"
+        android:layout_height="80sp"
+android:background="@drawable/ic_refrach"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tasb7"
+        />
+
+    <ImageView
+        android:id="@+id/tasb7"
+        android:layout_width="154dp"
+        android:layout_height="122dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/seb7a"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title" />
+
+    <Button
+        android:id="@+id/tsbeha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="التسبيحة"
+        android:background="#fff176"
+        android:textColor="#000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/refrach"
+        android:textSize="25sp"
+        android:layout_marginEnd="30sp"
+
+        />
+
+    <TextView
+        android:id="@+id/total"
+        android:background="#fff176"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="مجموع التسبيحات"
+        android:textColor="#000"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="30sp"
+        app:layout_constraintTop_toBottomOf="@id/refrach" />
+
+
+    <TextView
+        android:id="@+id/tasb7nmber"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10sp"
+        android:textColor="#fff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/tsbeha"
+        android:textStyle="bold"
+        tools:text="0"
+        android:hint="0"
+        android:layout_marginEnd="20sp"
+        android:textSize="20sp"
+        android:background="#000"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/tsbeha"
+
+        />
+    <TextView
+        android:id="@+id/totalNumber"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10sp"
+        android:background="#000"
+        android:gravity="center"
+        android:textColor="#fff"
+        android:hint="0"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/total"
+        app:layout_constraintStart_toStartOf="@id/total"
+        app:layout_constraintTop_toBottomOf="@id/total"
+        tools:text="0"
+        />
+
+    <Spinner
+        android:theme="@style/mySpinnerItemStyle"
+        android:id="@+id/spannertasb7at"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:entries="@array/tasb7at"
+        android:gravity="center"
+        android:background="#fff176"
+        android:padding="15sp"
+        android:layout_marginTop="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/totalNumber" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/spannertasb7at"
+        app:layout_constraintTop_toBottomOf="@id/spannertasb7at"
+        app:layout_constraintTop_toTopOf="@id/spannertasb7at"
+        android:layout_margin="10sp"
+
+        />
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
